corrected alert icon spacing

--- a/dashboard/style.css
+++ b/dashboard/style.css
@@ -34,6 +34,10 @@ body {
     cursor: pointer;
 }
 
+#alert-icon-span > i{
+    min-width: 12px;
+}
+
 #alert-window {
     border: 2px solid indianred;
     border-radius: 5px;
